[package]
name = "luminal"
version = "0.2.0"
edition = "2021"
description = "Deep learning at the speed of light."
license = "MIT OR Apache-2.0"

[features]
#default = ["cuda"]
default = ["metal"]
cuda = ["dep:cudarc"]
metal = ["dep:metal-rs"]

[[example]]
name = "mistral"
path = "examples/mistral/main.rs"
required-features = ["metal"]

[dependencies]
luminal_macro = { path = "./resources/luminal_macro" }
itertools = "0.11.0"
matrixmultiply = "0.3.8"
num-traits = "0.2.16"
petgraph = "0.6.4"
rand = "0.8.5"
urlencoding = "2.1.2"
webbrowser = "0.8.10"
dyn-clone = "1.0.12"
cudarc = { git = "https://github.com/jafioti/cudarc", features = [
    "cublas",
    "f16",
], optional = true }
metal-rs = { version = "0.27.0", package = "metal", features = [
    "mps",
], optional = true }
safetensors = "0.3.1"
memmap2 = { version = "0.7.1", features = ["stable_deref_trait"] }
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
tinyvec = "1.6.0"
term_size = "0.3.2"
colored = "2.0.4"
regex = "1.9.5"
rustc-hash = "1.1.0"

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }
rust_tokenizers = "8.1.0"
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
