[package]
name = "luminal"
version = "0.2.0"
edition = "2021"
description = "Deep learning at the speed of light."
license = "MIT OR Apache-2.0"

[dependencies]
luminal_macro = { path = "./resources/luminal_macro" }
itertools = "0.11.0"
num-traits = "0.2.16"
petgraph = "0.6.4"
rand = "0.8.5"
urlencoding = "2.1.2"
webbrowser = "0.8.10"
dyn-clone = "1.0.12"
safetensors = "0.3.1"
memmap2 = { version = "0.7.1", features = ["stable_deref_trait"] }
half = { version = "2.3.1", features = ["num-traits", "rand_distr"] }
tinyvec = "1.6.0"
term_size = "0.3.2"
colored = "2.0.4"
regex = "1.9.5"
rustc-hash = "1.1.0"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }

[workspace]
members = [
    "examples/*",
    "crates/luminal_cpu",
    "crates/luminal_nn",
    "crates/luminal_training",
]
exclude = [
    "crates/luminal_metal",
    "crates/luminal_cuda",
]
