[package]
name = "luminal_2"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
itertools = "0.14.0"
egglog = { git = "https://github.com/egraphs-good/egglog", rev="b8ae2d18e68667af966ef392156db30a802ef07f" }
petgraph = {version="0.8.1", features=["serde-1"]}
metal-rs = { version = "0.28.0", package = "metal" }
urlencoding = "2.1.3"
webbrowser = "1.0.4"
regex = "1.11.1"
serde_json = "1.0.140"
colored = "3.0.0"
generational-box = "0.6.2"
egg = "0.9.5"
symbolic_expressions = "5.0.3"
rustc-hash = "2.1.1"
rand = "0.9.1"
egraph-serialize = "0.2.0"
indexmap = "2.9.0"
serde = "1.0.219"
