[package]
name = "luminal_2"
version = "0.1.0"
edition = "2024"


[dependencies]
luminal = {path="../../"}
itertools = "0.14.0"
egglog = { git = "https://github.com/egraphs-good/egglog", rev="d2fa5b733de0796fb187dc5a27e570d5644aa75a" }
metal-rs = { version = "0.28.0", package = "metal" }
urlencoding = "2.1.3"
webbrowser = "1.0.4"
regex = "1.11.1"
serde_json = "1.0.140"
colored = "3.0.0"
generational-box = "0.6.2"
egg = "0.9.5"
symbolic_expressions = "5.0.3"
rustc-hash = "2.1.1"
rand = "0.8.5"
egraph-serialize = "0.2.0"
indexmap = "2.9.0"
serde = "1.0.219"
