[package]
name = "luminal_2"
version = "0.1.0"
edition = "2024"

[features]
default = ["metal"]
cuda = ["dep:cudarc", "dep:luminal_cuda"]
metal = []

[dependencies]
luminal = {path="../../"}
luminal_cuda = {path="../luminal_cuda", optional=true}
cudarc = { version = "0.16.6", features = [
	"f16",
	"cuda-12080",
], optional=true}
#metal-rs = { version = "0.28.0", package = "metal", optional=true }
objc2 = "0.6.2"
objc2-metal = "0.3.1"
itertools = "0.14.0"
egglog = { git = "https://github.com/egraphs-good/egglog", rev="762c32004c67a02161f59502c011f24e5943dc20" }
egglog_proof = { git = "https://github.com/MilkBlock/egglog", rev="e1664786863a19b05d40e30a20b961aa09ea8e2e", package="egglog" }
urlencoding = "2.1.3"
webbrowser = "1.0.4"
regex = "1.11.1"
serde_json = "1.0.140"
colored = "3.0.0"
generational-box = "0.6.2"
egg = "0.9.5"
symbolic_expressions = "5.0.3"
rustc-hash = "2.1.1"
rand = "0.9.1"
egraph-serialize = "0.2.0"
indexmap = "2.9.0"
serde = "1.0.219"
ratatui = "0.29.0"
crossterm = "0.29.0"
libc = "0.2.174"
unicode-width = "0.2"
objc2-foundation = "0.3.1"
