[package]
name = "luminal_metal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
luminal = { path = "../.." }
metal-rs = { version = "0.27.0", package = "metal", features = ["mps"] }
num-traits = "0.2.18"
rand = "0.8.5"
rustc-hash = "1.1.0"

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }
