[package]
name = "luminal_metal"
version = "0.2.0"
edition = "2021"
description = "Metal compiler for luminal"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
luminal = { path = "../.." }
metal-rs = { version = "0.27.0", package = "metal", features = ["mps"] }
num-traits = "0.2.18"
rustc-hash = "1.1.0"

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }
paste = "1.0.14"
rand = "0.8.5"