[package]
name = "luminal_training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
luminal = {path="../.."}
rustc-hash = "1.1.0"

[dev-dependencies]
dfdx = { version = "0.13", features = ["f16"] }
paste = "1.0.14"
rand = "0.8.5"
luminal_nn = { path = "../luminal_nn" }

[features]
legacy_prims = []