[package]
name = "llama"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
luminal = { path = "../.." }
luminal_2 = {path="../../crates/luminal_2"}
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu"}
luminal_cuda = { path = "../../crates/luminal_cuda" }
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
colored = "2.1.0"
itertools = "0.12.1"
tokenizers = "0.15.2"
rustc-hash = "2.1.1"
rand = "0.9.1"
cudarc = { version = "0.16.6", features = [
	"f16",
	"cuda-12080",
] }
