[package]
name = "llama_server"
version = "0.1.0"
edition = "2021"

[features]
metal = ["dep:luminal_metal", "dep:metal-rs"]
cuda = ["dep:luminal_cuda"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu" }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
metal-rs = { version = "0.27.0", package = "metal", features = [
    "mps",
], optional = true }
colored = "2.1.0"
itertools = "0.12.1"
tokenizers = "0.15.2"
axum = "0.7.5"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
async-trait = "0.1.80"
serde_json = "1.0.116"
