[package]
name = "mistral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminal = {path="../.."}
luminal_metal = {path="../../crates/luminal_metal"}
rust_tokenizers = "8.1.0"
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
metal-rs = { version = "0.27.0", package = "metal", features = ["mps"] }
colored = "2.1.0"
