[package]
name = "phi"
version = "0.1.0"
edition = "2021"

[features]
metal = ["dep:luminal_metal", "dep:metal-rs"]
cuda = ["dep:luminal_cuda", "dep:luminal_cudarc"]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu"}
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
metal-rs = { version = "0.27.0", package = "metal", features = [
    "mps",
], optional = true }
colored = "2.1.0"
itertools = "0.12.1"
luminal_cudarc = { version="0.10.0", features = [
    "cublas",
    "f16",
], optional=true}
tokenizers = "0.15.2"
