[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

[features]
metal = ["dep:luminal_metal"]
cuda = ["dep:luminal_cuda"]
default = ["metal"]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu" }
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
colored = "2.1.0"
itertools = "0.12.1"
tokenizers = "0.21"
half = "2.6.0"
safetensors = "0.5.3"
serde_json = "1.0.140"
hf-hub = "0.4.2"
