[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
luminal = { path = "../.." }
luminal_nn = {path="../../crates/luminal_nn"}
rand = "0.9.1"
regex = "1.11.1"
serde_json = "1.0.140"
urlencoding = "2.1.3"
webbrowser = "1.0.5"