[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
metal = ["dep:luminal_metal"]
cuda = ["dep:luminal_cuda"]

[dependencies]
luminal = {path="../.."}
luminal_nn = {path="../../crates/luminal_nn"}
luminal_cpu = { path = "../../crates/luminal_cpu"}
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
num-traits = "0.2.18"
num_cpus = "1.16.0"
byteorder = "1.5.0"
memmap2 = "0.9.4"
tokenizers = "0.15.2"
itertools = "0.12.1"
symphonia = "0.5.4"
anyhow = "1.0.83"
safetensors = "0.4.3"