[package]
name = "yolo_v8"
version = "0.1.0"
edition = "2021"

[features]
default=["metal"]
metal = ["dep:luminal_metal"]
cuda = ["dep:luminal_cuda"]

[dependencies]
luminal = { path = "../.." }
luminal_nn = { path = "../../crates/luminal_nn" }
luminal_cpu = { path = "../../crates/luminal_cpu"}
luminal_metal = { path = "../../crates/luminal_metal", optional = true }
luminal_cuda = { path = "../../crates/luminal_cuda", optional = true }
clap = { version = "4.4.18", features = ["derive"] }
byteorder = "1.5.0"
memmap2 = "0.9.4"
colored = "2.1.0"
itertools = "0.12.1"
tokenizers = "0.15.2"
image = "0.25.1"
imageproc = "0.25.0"
ab_glyph = "0.2.28"
safetensors = "0.4.3"
