[package]
name = "cudarc"
version = "0.9.14"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Safe wrappers around CUDA apis"
homepage = "https://github.com/coreylowman/cudarc"
documentation = "https://docs.rs/cudarc"
repository = "https://github.com/coreylowman/cudarc"
readme = "README.md"

keywords = [
    "cuda",
    "nvidia",
    "gpu",
    "nvrtc",
    "cublas",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["ci-check", "f16", "cudnn"]

[features]
default = ["std", "driver", "nvrtc", "cublas", "curand"]
nvrtc = []
driver = ["nvrtc"]
cublas = ["driver"]
cudnn = ["driver"]
curand = ["driver"]
nccl = ["driver"]
std = []
no-std = ["no-std-compat/std", "dep:spin"]
f16 = ["dep:half"]
ci-check = []
static-linking=[]

[dependencies]
spin = { version = "0.9.8", optional = true, features = ["rwlock"], default-features = false }
no-std-compat = { version = "0.4.1", optional = true, features = [ "alloc" ] }
half = { version = "2.3.1", optional = true, default-features = false, features = ["num-traits", "rand_distr"] }
