[package]
name = "build-workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"

[dependencies]
cudarc = { version = "0.9.14", path = "../.." }
